feat: complete Education and Skills module